# speech

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_install.cmake  main.cpp
PitchAnalyzerTestApp/: PitchAnalyzerTestApp.sln
PitchAnalyzerTestApp/TestApp/: Class1.cs  Program.cs  TestApp.csproj
PitchAnalyzerTestApp/TestApp/Properties/: AssemblyInfo.cs
example/: Program.cs
speech/: CMakeLists.txt
speech/include/: audioio.h  jsonString.hpp  parameterio.h  speech.hpp
speech/include/nlohmann/: json.hpp
speech/include/nlohmann/detail/conversions/: to_json.hpp
speech/include/nlohmann/detail/input/: binary_reader.hpp
speech/include/nlohmann/detail/meta/: type_traits.hpp
speech/include/nlohmann/detail/output/: output_adapters.hpp  serializer.hpp
speech/lib/: world.lib  world_tool.lib
speech/src/: audioio.cpp  jsonString.hpp  parameterio.cpp  speech.cpp  speech.hpp
src/: main.cpp
vs2017/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.sln  main.vcxproj  main.vcxproj.filters
vs2017/main.dir/Release/main.tlog/: clang-cl.command.1.tlog  clang-cl.read.1.tlog  clang-cl.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lld-link.command.1.tlog  lld-link.read.2.tlog  lld-link.write.1.tlog
vs2017/speech/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  speech.sln  speech.vcxproj  speech.vcxproj.filters
vs2017/speech/Release/: speech.lib
vs2017/speech/speech.dir/Release/speech.tlog/: clang-cl.command.1.tlog  clang-cl.read.1.tlog  clang-cl.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lld-link.command.1.tlog  lld-link.read.4.tlog  lld-link.write.1.tlog  speech.lastbuildstate  speech.write.1u.tlog
vs2017/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
